--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # SERVER_URL=http://localhost:5000/api/v1
 NEXT_PUBLIC_SERVER_URL=https://donation-campaign-server.onrender.com/api/v1
+NEXT_PUBLIC_IMAGE_API=b54b9c0977d807009e93cb2418d6f90c
