--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
